--- a/Backend/package.json
+++ b/Backend/package.json
@@ -50,7 +50,8 @@
     "@langchain/ollama": "^1.0.3",
     "@langchain/openai": "^1.1.3",
     "@neondatabase/serverless": "^1.0.2",
-    "@opentelemetry/api-metrics": "^1.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-metrics": "^0.33.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@sentry/node": "^10.29.0",
     "@supabase/supabase-js": "^2.38.0",
@@ -74,6 +75,7 @@
     "speakeasy": "^2.0.0",
     "stripe": "^20.0.0",
     "validator": "^13.15.23",
+    "pino": "^9.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
