fix: Resolve TypeScript errors, fix auth schemas, and update frontend dependencies for production stability - Sanket

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,6 +41,7 @@
             "date-fns": "*",
             "embla-carousel-react": "^8.6.0",
             "hono": "*",
+            "highlight.js": "^11.9.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "motion": "*",
